# VoiceInput

./: .env.example  .gitignore  CHATGPT_REVIEW_PROMPT.md  README.md  THIRD_PARTY_NOTICES.md  VALIDATION.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/spike/: audio.rs  credentials.rs  error.rs  frame.rs  mod.rs  protocol.rs  safe_log.rs
