[package]
name = "voiceinput"
version = "0.1.0"
description = "Windows voice input protocol spike"
authors = ["VoiceInput contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "voiceinput_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
dotenvy = "0.15"
futures-util = "0.3"
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
